--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "book-search",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.2.0",
+  "author": "",
+  "license": "ISC",
+  "main": "server.js",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.1",
     "mongoose": "^5.11.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
-    "web-vitals": "^1.1.0"
+    "axios": "^0.21.1",
+    "express": "^4.16.3"
   },
   "scripts": {
     "start": "react-scripts start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && npm install",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
